--- a/igloor.html
+++ b/igloor.html
@@ -83,14 +83,15 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About</h4>
-              <p class="text-white">Tourism promotion means activities and expenditures designed to increase tourism, including but not limited to advertising, publicizing, or otherwise distributing information for the purpose of attracting and welcoming tourists.</p>
+              <p class="text-white">This website helps to draw the attention of the potential tourists, modify the behaviour of the existing buyers and influence them to visit a destination</p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="https://twitter.com/TourismPromoti5" class="text-white">Follow on Twitter</a></li>
-                <li><a href="https://www.instagram.com/tourismpromotionkarnataka/" class="text-white">Like On Instagram</a></li>
-                <li><a href="mailto:tourismpromotionkarnataka@gmail.com" class="text-white">Email Us</a></li>
+                <li><a href="https://twitter.com/TourismPromoti5" class="text-white" target="_blank">Follow on Twitter</a></li>
+                <li><a href="https://www.instagram.com/tourismpromotionkarnataka/" class="text-white" target="_blank">Like On Instagram</a></li>
+                <li><a href="mailto:tourismpromotionkarnataka@gmail.com" class="text-white" target="_blank">Email Us</a></li>
+                <li><a href="contributers.html" class="text-white" target="_blank">contributers</a></li>
               </ul>
             </div>
           </div>
@@ -99,7 +100,10 @@
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
           <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24">
+              <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
+              <circle cx="12" cy="13" r="4" />
+            </svg>
             <strong>Tourism</strong>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -174,11 +178,7 @@
 
   <div class="container marketing" style="text-align: center; padding-top:50px;">
     <h1>Gallery</h1>
-    <video width="1300" height="800" controls>
-      <source src="images/igloor/video/igloor_video.mp4" type="video/mp4">
-      <source src="movie.ogg" type="video/ogg">
-      Your browser does not support the video tag.
-    </video>
+    <iframe width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/--6NbrLUrdM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <img src="images/igloor/igloor4.png" width="1300" height="800" style="padding-top:10px;" alt="">
     <img src="images/igloor/igloor5.png" width="1300" height="800" style="padding-top:10px;" alt="">
