--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="images/Janapada_loka/Janapada6.webp" alt="">
+                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="images/Janapada_loka/Janapada6.jpg" alt="">
 
                 <div class="card-body">
                   <h4>Janapada Loka</h4>
