--- a/contributers.html
+++ b/contributers.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tourism Promotion</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
   <link rel="apple-touch-icon" href="/docs/5.2/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
   <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -14,60 +15,7 @@
   <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon.ico">
   <meta name="theme-color" content="#712cf9">
 
-
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-
-    .b-example-divider {
-      height: 3rem;
-      background-color: rgba(0, 0, 0, .1);
-      border: solid rgba(0, 0, 0, .15);
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-    }
-
-    .b-example-vr {
-      flex-shrink: 0;
-      width: 1.5rem;
-      height: 100vh;
-    }
-
-    .bi {
-      vertical-align: -.125em;
-      fill: currentColor;
-    }
-
-    .nav-scroller {
-      position: relative;
-      z-index: 2;
-      height: 2.75rem;
-      overflow-y: hidden;
-    }
-
-    .nav-scroller .nav {
-      display: flex;
-      flex-wrap: nowrap;
-      padding-bottom: 1rem;
-      margin-top: -1px;
-      overflow-x: auto;
-      text-align: center;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-    }
-  </style>
-
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -114,6 +62,9 @@
     <div style="padding-top:50px;" class="row mb-2">
       <div class="col-md-4">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col-auto d-none d-lg-block">
+            <img width="200" height="250" src="images/developers/yadu.jpg" alt="">
+          </div>
           <div class="col p-4 d-flex flex-column position-static">
             <h3 class="mb-0">Yadunandana V R</h3>
             <p style="padding-top:10px;" class="card-text mb-auto"><b>College :</b> SJB Institute of Technology</p>
@@ -121,13 +72,13 @@
             <p class="card-text mb-auto"><b>Department : </b> Computer Science and Engineering</p>
             <a href="mailto:yadunandanavr@gmail.com" class="stretched-link">Contact</a>
           </div>
-          <div class="col-auto d-none d-lg-block">
-            <img width="200" height="250" src="images/developers/yadu.jpg" alt="">
-          </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col-auto d-none d-lg-block">
+            <img width="200" height="250" src="images/developers/shazeb.jpg" alt="">
+          </div>
           <div class="col p-4 d-flex flex-column position-static">
             <h3 class="mb-0">Syed Mohameed Shazeb</h3>
             <p style="padding-top:10px;" class="card-text mb-auto"><b>College :</b> SJB Institute of Technology</p>
@@ -135,23 +86,20 @@
             <p class="card-text mb-auto"><b>Department : </b> Computer Science and Engineering</p>
             <a href="mailto:syedmdshazeb986@gmail.com" class="stretched-link">Contact</a>
           </div>
-          <div class="col-auto d-none d-lg-block">
-            <img width="200" height="250" src="images/developers/shazeb.jpg" alt="">
-          </div>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col-auto d-none d-lg-block">
+            <img width="200" height="250" src="images/developers/sagar.jpeg" alt="">
+          </div>
           <div class="col p-4 d-flex flex-column position-static">
             <h3 class="mb-0">Sagar Devanur</h3>
             <p style="padding-top:10px;" class="card-text mb-auto"><b>College :</b> SJB Institute of Technology</p>
             <p class="card-text mb-auto"><b>Usn : </b> 1JB18CS127</p>
             <p class="card-text mb-auto"><b>Department : </b> Computer Science and Engineering</p>
             <a href="mailto:sagardevanur@gmail.com" class="stretched-link">Contact</a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img width="200" height="250" src="images/developers/sagar.jpeg" alt="">
           </div>
         </div>
       </div>
