--- a/igloor.html
+++ b/igloor.html
@@ -1,190 +1,144 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tourism Promotion</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/carousel/">
-    <link href="/docs/5.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" href="/docs/5.2/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="manifest" href="/docs/5.2/assets/img/favicons/manifest.json">
-    <link rel="mask-icon" href="/docs/5.2/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-    <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon.ico">
-    <meta name="theme-color" content="#712cf9">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Tourism Promotion</title>
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/carousel/">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
+  <link rel="apple-touch-icon" href="/docs/5.2/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="manifest" href="/docs/5.2/assets/img/favicons/manifest.json">
+  <link rel="mask-icon" href="/docs/5.2/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
+  <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon.ico">
+  <meta name="theme-color" content="#712cf9">
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
+  <link rel="stylesheet" href="style.css">
+  <link href="carousel.css" rel="stylesheet">
 
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
+</head>
 
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
+<body>
 
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-    </style>
-
-
-    <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
-  </head>
-  <body>
-
-    <header>
-      <div class="collapse bg-dark" id="navbarHeader">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-8 col-md-7 py-4">
-              <h4 class="text-white">About</h4>
-              <p class="text-white">This website helps to draw the attention of the potential tourists, modify the behaviour of the existing buyers and influence them to visit a destination</p>
-            </div>
-            <div class="col-sm-4 offset-md-1 py-4">
-              <h4 class="text-white">Contact</h4>
-              <ul class="list-unstyled">
-                <li><a href="https://twitter.com/TourismPromoti5" class="text-white" target="_blank">Follow on Twitter</a></li>
-                <li><a href="https://www.instagram.com/tourismpromotionkarnataka/" class="text-white" target="_blank">Like On Instagram</a></li>
-                <li><a href="mailto:tourismpromotionkarnataka@gmail.com" class="text-white" target="_blank">Email Us</a></li>
-                <li><a href="contributers.html" class="text-white" target="_blank">contributers</a></li>
-              </ul>
-            </div>
+  <header>
+    <div class="collapse bg-dark" id="navbarHeader">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h4 class="text-white">About</h4>
+            <p class="text-white">This website helps to draw the attention of the potential tourists, modify the behaviour of the existing buyers and influence them to visit a destination</p>
           </div>
-        </div>
-      </div>
-      <div class="navbar navbar-dark bg-dark shadow-sm">
-        <div class="container">
-          <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24">
-              <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
-              <circle cx="12" cy="13" r="4" />
-            </svg>
-            <strong>Tourism</strong>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-      </div>
-    </header>
-
-<main>
-
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="bd-placeholder-img" width="100%" height="100%" src="images/igloor/igloor1.png" alt="">
-
-        <div class="container">
-          <div class="carousel-caption text-start">
-            <h1>Igloor Dam</h1>
-            <p>Igloor dam is part of Channapatna Tourism Ramanagara Tourism Karnataka Tourism also known as Iglur Dam or Iggalur Dam.</p>
-            <p><a class="btn btn-lg btn-primary" href="https://www.youtube.com/watch?v=--6NbrLUrdM">Explore More</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="bd-placeholder-img" width="100%" height="100%" src="images/igloor/igloor2.png" alt="">
-
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Visit</h1>
-            <p>Iggalur(ಇಗ್ಗಲೂರ್ ) is a Village in. It is located 36 KM from Ramanagara. 18 KM from Channapatna. 86 KM from State capital Bangalore, 70 kms from Mysore.</p>
-            <p><a class="btn btn-lg btn-primary" href="https://www.google.com/maps/place/Igloor+Dam/@12.4738466,77.133906,303m/data=!3m1!1e3!4m5!3m4!1s0x3baf009300a5649d:0x500f90ff5250b6bd!8m2!3d12.4744434!4d77.1338288s">Goole Direction</a></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="carousel-item">
-        <img class="bd-placeholder-img" width="100%" height="100%" src="images/igloor/igloor3.png" alt="">
-
-        <div class="container">
-          <div class="carousel-caption text-end">
-            <h1>Explore More</h1>
-            <p><a class="btn btn-lg btn-primary" href="https://www.google.com/maps/uv?pb=!1s0x3baf009300a5649d%3A0x500f90ff5250b6bd!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNZx54xcLKnfEDaL1m9dIY2qrS_rNLXX17ATtHL%3Dw213-h160-k-no!5segloor%20dam%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipNZx54xcLKnfEDaL1m9dIY2qrS_rNLXX17ATtHL&hl=en&sa=X&ved=2ahUKEwido--e9sL4AhWbT2wGHdXNBXIQoip6BAhPEAM&cshid=1655964991478340">Browse gallery</a></p>
+          <div class="col-sm-4 offset-md-1 py-4">
+            <h4 class="text-white">Contact</h4>
+            <ul class="list-unstyled">
+              <li><a href="https://twitter.com/TourismPromoti5" class="text-white" target="_blank">Follow on Twitter</a></li>
+              <li><a href="https://www.instagram.com/tourismpromotionkarnataka/" class="text-white" target="_blank">Like On Instagram</a></li>
+              <li><a href="mailto:tourismpromotionkarnataka@gmail.com" class="text-white" target="_blank">Email Us</a></li>
+              <li><a href="contributers.html" class="text-white" target="_blank">contributers</a></li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+      <div class="container">
+        <a href="index.html" class="navbar-brand d-flex align-items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24">
+            <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
+            <circle cx="12" cy="13" r="4" />
+          </svg>
+          <strong>Tourism</strong>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+  </header>
+
+  <main>
+
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="bd-placeholder-img" width="100%" height="100%" src="images/igloor/igloor1.png" alt="">
+
+          <div class="container">
+            <div class="carousel-caption text-start">
+              <h1>Igloor Dam</h1>
+              <p>Igloor dam is part of Channapatna Tourism Ramanagara Tourism Karnataka Tourism also known as Iglur Dam or Iggalur Dam.</p>
+              <p><a class="btn btn-lg btn-primary" href="https://www.youtube.com/watch?v=--6NbrLUrdM">Explore More</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="bd-placeholder-img" width="100%" height="100%" src="images/igloor/igloor2.png" alt="">
+
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Visit</h1>
+              <p>Iggalur(ಇಗ್ಗಲೂರ್ ) is a Village in. It is located 36 KM from Ramanagara. 18 KM from Channapatna. 86 KM from State capital Bangalore, 70 kms from Mysore.</p>
+              <p><a class="btn btn-lg btn-primary" href="https://www.google.com/maps/place/Igloor+Dam/@12.4738466,77.133906,303m/data=!3m1!1e3!4m5!3m4!1s0x3baf009300a5649d:0x500f90ff5250b6bd!8m2!3d12.4744434!4d77.1338288s">Goole Direction</a></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img class="bd-placeholder-img" width="100%" height="100%" src="images/igloor/igloor3.png" alt="">
+
+          <div class="container">
+            <div class="carousel-caption text-end">
+              <h1>Explore More</h1>
+              <p><a class="btn btn-lg btn-primary"
+                  href="https://www.google.com/maps/uv?pb=!1s0x3baf009300a5649d%3A0x500f90ff5250b6bd!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNZx54xcLKnfEDaL1m9dIY2qrS_rNLXX17ATtHL%3Dw213-h160-k-no!5segloor%20dam%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipNZx54xcLKnfEDaL1m9dIY2qrS_rNLXX17ATtHL&hl=en&sa=X&ved=2ahUKEwido--e9sL4AhWbT2wGHdXNBXIQoip6BAhPEAM&cshid=1655964991478340">Browse
+                  gallery</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
 
 
-  <div class="container marketing" style="padding-top:50px; font-size:20px">
-    <h1 style="padding-bottom:10px;">Igloor Dam</h1>
-    <p>Igloor dam Devegowda Barrage Channapatna Tourism Ramanagara Tourism Karnataka Tourism Iglur. Igloor dam is part of Channapatna Tourism Ramanagara Tourism Karnataka Tourism also known as Iglur Dam or Iggalur Dam. Iggalur Dam is part of Dams of Karnataka. Igloor dam is part of Water Resource Project at Channapatna Taluk in Ramanagara District of Karnataka State, India. Iggalur Medium Irrigation Project benefits Mandya,Ramanagara district. Igalur dam is built across Shimsha river a tributary of Cauvery river . The shimsha river originates in the southern part of the Devarayanadurga hill in the Tumkur district of Karnataka , enters the Mandya district. In Mandya district, the river flows in a south-eastern direction and has a waterfall at Shimshapura in Malavalli Taluk. Just after Shimshapura it reaches the border of Chamarajanagar district where it joins the river Kaveri. The confluence of Shimsha and Kaveri is also near the Shivanasamudra falls. The river flows for about 221 km , before joining the river Kaveri. Iggalur(ಇಗ್ಗಲೂರ್ ) is a Village in. It is located 36 KM from Ramanagara. 18 KM from Channapatna. 86 KM from State capital Bangalore, 70 kms from Mysore .</p>
+    <div class="container marketing" style="padding-top:50px; font-size:20px">
+      <h1 style="padding-bottom:10px;">Igloor Dam</h1>
+      <p>Igloor dam Devegowda Barrage Channapatna Tourism Ramanagara Tourism Karnataka Tourism Iglur. Igloor dam is part of Channapatna Tourism Ramanagara Tourism Karnataka Tourism also known as Iglur Dam or Iggalur Dam. Iggalur Dam is part of Dams
+        of Karnataka. Igloor dam is part of Water Resource Project at Channapatna Taluk in Ramanagara District of Karnataka State, India. Iggalur Medium Irrigation Project benefits Mandya,Ramanagara district. Igalur dam is built across Shimsha river
+        a tributary of Cauvery river . The shimsha river originates in the southern part of the Devarayanadurga hill in the Tumkur district of Karnataka , enters the Mandya district. In Mandya district, the river flows in a south-eastern direction
+        and has a waterfall at Shimshapura in Malavalli Taluk. Just after Shimshapura it reaches the border of Chamarajanagar district where it joins the river Kaveri. The confluence of Shimsha and Kaveri is also near the Shivanasamudra falls. The
+        river flows for about 221 km , before joining the river Kaveri. Iggalur(ಇಗ್ಗಲೂರ್ ) is a Village in. It is located 36 KM from Ramanagara. 18 KM from Channapatna. 86 KM from State capital Bangalore, 70 kms from Mysore .</p>
 
-  </div>
+    </div>
 
-  <div class="container marketing" style="text-align: center; padding-top:50px;">
-    <h1>Gallery</h1>
-    <iframe width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/--6NbrLUrdM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="container marketing" style="text-align: center; padding-top:50px;">
+      <h1>Gallery</h1>
+      <iframe class="responsive" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/--6NbrLUrdM" title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <img src="images/igloor/igloor4.png" width="1300" height="800" style="padding-top:10px;" alt="">
-    <img src="images/igloor/igloor5.png" width="1300" height="800" style="padding-top:10px;" alt="">
-</main>
+      <img class="responsive" src="images/igloor/igloor4.png" width="1300" height="800" style="padding-top:10px;" alt="">
+      <img class="responsive" src="images/igloor/igloor5.png" width="1300" height="800" style="padding-top:10px;" alt="">
+  </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-  </body>
+</body>
+
 </html>
