add responsiveness to iframe

--- a/srs_hills.html
+++ b/srs_hills.html
@@ -134,8 +134,10 @@
 
     <div class="container marketing" style="text-align: center; padding-top:50px;">
       <h1>Gallery</h1>
-      <iframe class="responsive" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/ajegLrGIIbQ" title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="containerForIframe">
+        <iframe class="responsive-iframe" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/ajegLrGIIbQ" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
 
       <img class="responsive" src="images/srs_hills/srs2.png" width="1300" height="800" style="padding-top:10px;" alt="">
       <img class="responsive" src="images/srs_hills/srs6.png" width="1300" height="800" style="padding-top:10px;" alt="">
