--- a/igloor.html
+++ b/igloor.html
@@ -130,8 +130,10 @@
 
     <div class="container marketing" style="text-align: center; padding-top:50px;">
       <h1>Gallery</h1>
-      <iframe class="responsive" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/--6NbrLUrdM" title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="containerForIframe">
+        <iframe class="responsive-iframe" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/--6NbrLUrdM" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
 
       <img class="responsive" src="images/igloor/igloor4.png" width="1300" height="800" style="padding-top:10px;" alt="">
       <img class="responsive" src="images/igloor/igloor5.png" width="1300" height="800" style="padding-top:10px;" alt="">
