--- a/janapada_loka.html
+++ b/janapada_loka.html
@@ -123,7 +123,10 @@
 
   <div class="container marketing" style="text-align: center; padding-top:50px;">
     <h1>Gallery</h1>
-    <iframe class="responsive" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/YG-Y_wGhKc8?start=12" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="containerForIframe">
+      <iframe class="responsive-iframe" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/YG-Y_wGhKc8?start=12" title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
     <img class="responsive" src="images/Janapada_loka/janapada4.jpg" width="1300" height="800" style="padding-top:10px;" alt="">
     <img class="responsive" src="images/Janapada_loka/janapada8.jpg" width="1300" height="800" style="padding-top:10px;" alt="">
