--- a/kanva.html
+++ b/kanva.html
@@ -124,7 +124,10 @@ You can see a fisheries training and research center at another side of the Kanv
 
   <div class="container marketing" style="text-align: center; padding-top:50px;">
     <h1>Gallery</h1>
-    <iframe class="responsive" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/4zVQhRYbQe8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="containerForIframe">
+        <iframe class="responsive-iframe" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/4zVQhRYbQe8" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
 
     <img class="responsive" src="images/kanva/kanva2.png" width="1300" height="800" style="padding-top:10px;" alt="">
     <img class="responsive" src="images/kanva/kanva5.png" width="1300" height="800" style="padding-top:10px;" alt="">
