--- a/ramadevara_betta.html
+++ b/ramadevara_betta.html
@@ -140,9 +140,11 @@
 
     <div class="container marketing" style="text-align: center; padding-top:50px;">
       <h1>Gallery</h1>
-      <iframe class="responsive" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/yR0TOAJ2RAc" title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+      <div class="containerForIframe">
+        <iframe class="responsive-iframe" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/yR0TOAJ2RAc" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      
       <img class="responsive" src="images/ramadevara_betta/ramadevara_betta5.jpg" width="1300" height="800" style="padding-top:10px;" alt="">
       <img class="responsive" src="images/ramadevara_betta/ramadevara_betta4.webp" width="1300" height="800" style="padding-top:10px;" alt="">
       <img class="responsive" src="images/ramadevara_betta/ramadevara_betta6.jpg" width="1300" height="800" style="padding-top:10px;" alt="">
