--- a/ramadevara_betta.html
+++ b/ramadevara_betta.html
@@ -60,7 +60,7 @@
 
   <main>
 
-    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="myCarousel" class="carousel slide carousel-fade " data-bs-ride="carousel">
 
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -144,7 +144,7 @@
         <iframe class="responsive-iframe" width="1300" height="800" style="padding-top:30px;" src="https://www.youtube.com/embed/yR0TOAJ2RAc" title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      
+
       <img class="responsive" src="images/ramadevara_betta/ramadevara_betta5.jpg" width="1300" height="800" style="padding-top:10px;" alt="">
       <img class="responsive" src="images/ramadevara_betta/ramadevara_betta4.webp" width="1300" height="800" style="padding-top:10px;" alt="">
       <img class="responsive" src="images/ramadevara_betta/ramadevara_betta6.jpg" width="1300" height="800" style="padding-top:10px;" alt="">
